[gd_scene load_steps=2 format=3 uid="uid://12rmxtoacfa7"]

[ext_resource type="Script" path="res://addons/neural_network/Editor/Scripts/NN_Debugger.gd" id="1"]

[node name="GameDebugger" type="Window"]
handle_input_locally = false
position = Vector2i(25, 45)
size = Vector2i(640, 360)
exclusive = true
min_size = Vector2i(360, 360)
script = ExtResource("1")

[node name="Refresh" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.867
anchor_right = 0.3
anchor_bottom = 0.975
offset_left = 0.32
offset_top = -0.160034
offset_right = -3.05176e-05
text = "Refresh"

[node name="NeuralNetworkList" type="ItemList" parent="."]
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.017
anchor_right = 0.3
anchor_bottom = 0.85
offset_left = 0.32
offset_top = -0.16
offset_right = -3.05176e-05
offset_bottom = -6.10352e-05
icon_scale = 2.0

[node name="View" type="GraphEdit" parent="."]
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.017
anchor_right = 0.988
anchor_bottom = 0.985
offset_left = 0.575989
offset_top = -0.0160007
offset_right = -0.176025
offset_bottom = -0.280029
mouse_default_cursor_shape = 5
minimap_size = Vector2(120, 80)
minimap_opacity = 0.45

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="about_to_popup" from="." to="." method="_on_game_debugger_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="item_selected" from="NeuralNetworkList" to="." method="_on_NeuralNetworkList_item_selected"]
[connection signal="connection_request" from="View" to="." method="_on_view_connection_request"]
[connection signal="disconnection_request" from="View" to="." method="_on_view_disconnection_request"]
